# chatterino7

.github/workflows/: build.yml  check-formatting.yml  lint.yml
lib/libcommuni/: CMakeLists.txt
lib/libcommuni/src/core/: CMakeLists.txt  irccommand.cpp  ircmessagecomposer.cpp
lib/libcommuni/src/model/: CMakeLists.txt
lib/libcommuni/src/util/: CMakeLists.txt  irccommandparser.cpp  ircpalette.cpp  irctextformat.cpp
